--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,5 +1,5 @@
 <nav class="site-nav" aria-label="Menu principal">
-  <div class="nav-container">
+  <div class="container nav-container">
 
     <a href="/" class="nav-logo">
       <img src="/img/logo-kwanza.svg" alt="Grupo Kwanza">
@@ -17,7 +17,12 @@
     <ul class="nav-menu">
       {{ range .Site.Menus.main }}
         <li>
-          <a href="{{ .URL }}">{{ .Name }}</a>
+          <a href="{{ .URL }}"
+             {{ if or ($.IsMenuCurrent "main" .) ($.HasMenuCurrent "main" .) }}
+               aria-current="page"
+             {{ end }}>
+            {{ .Name }}
+          </a>
         </li>
       {{ end }}
     </ul>
