--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -2,5 +2,6 @@
 
 {{ define "main" }}
   {{ partial "home/hero.html" . }}
+  {{ partial "home/eventos.html" . }}
   {{ partial "home/about.html" . }}
 {{ end }}
