--- a/layouts/shortcodes/musica.html
+++ b/layouts/shortcodes/musica.html
@@ -9,7 +9,7 @@
   </header>
 
   <div class="musica-conteudo">
-    <details class="musica-letra" open>
+    <details class="musica-letra">
       <summary>Veja aqui a letra</summary>
 
       <div class="musica-letra-conteudo">
