--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -3,11 +3,11 @@
 {{ end }}
 
 <!DOCTYPE html>
-<html lang="{{ .Lang }}" itemscope itemtype="http://schema.org/WebPage">
+<html lang="{{ .Lang }}" itemscope itemtype="http://schema.org/WebPage" translate="no">
   <head>
     {{ partial "head.html" . }}
   </head>
-  <body>
+  <body class="page">
     {{ partial "nav.html" . }}
     {{ block "main" . }}{{ end }}
     {{ partial "footer.html" . }}
