inclusao de conteudo e design da pagina Vem Aprender

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -23,5 +23,6 @@
 /* PAGES */
 @import "pages/equipe.css";
 @import "pages/guia.css";
-@import "pages/contatos.css";
 @import "pages/calendario.css";
+@import "pages/contatos.css";
+@import "pages/vem-aprender.css";
