--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -2,7 +2,11 @@
   <div class="container nav-container">
 
     <a href="/" class="nav-logo">
-      <img src="/img/logo-kwanza.svg" alt="Grupo Kwanza">
+      {{ if in .RelPermalink "/vem-aprender" }}
+        <img src="/img/logo-vem-aprender.webp" alt="Vem Aprender">
+      {{ else }}
+        <img src="/img/logo-kwanza.svg" alt="Grupo Kwanza">
+      {{ end }}
     </a>
 
     <!-- Botão hamburger (mobile) -->
